<resources>
    <string name="app_name">LIT</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="startimage">StartImage</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="submit">Submit</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="error_password_not_equal">Passwords are not equal</string>
    <string name="admin_xp10_com">admin@xp10.com</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="AddUser">Add User</string>
    <string name="insert_user_email">Insert User Email</string>
    <string name="friend_email">Friends Email Address</string>
    <string name="addFriend">Add Friend</string>
    <string name="invalid_email">Invalid Email Address</string>
    <string name="friends">Friends</string>
    <string name="friends_pending">Pending Requests</string>
    <string name="NewCategory">New Category</string>
    <string name="CategoryName">Category Name</string>
    <string name="add_item">Add Item</string>

</resources>