<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_lists"
            android:icon="@drawable/ic_assignment_black_24dp"
            android:title="All Lists " />
        <item
            android:id="@+id/nav_manage_friends"
            android:icon="@drawable/ic_friends_black_24dp"
            android:title="Manage friends" />

        <item
            android:id="@+id/nav_manage_categories"
            android:icon="@drawable/ic_menu_settings"
            android:title="Manage Categories" />

        <item
            android:id="@+id/nav_user_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="User Settings"
            />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_settings_power_black_24dp"
            android:title="Logout" />

    </group>

</menu>
